--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           para você!</h1>
 
         <p>
-          Nós criamos treinos <strong>exclusívos e únicos para você.</strong><br />
+          Nós criamos treinos <strong>exclusivos e únicos para você.</strong><br />
           Invista no seu corpo e <strong>tenha muito mais performance</strong> e qualidade de vida.
         </p>
 
@@ -55,7 +55,7 @@
     </footer>
   </div>
 
-  <img src="images/balls.svg" alt="bolinhas decorativas">
+  <img id="balls" src="images/balls.svg" alt="bolinhas decorativas">
 
 </body>
 
